# agendum

./: .gitignore  README.md  build.sh  serve-pwa.sh  start.sh
.github/workflows/: gh-pages.yml
agendum-core/: Cargo.toml
agendum-core/src/: lib.rs  normalizer.rs  parser.rs
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
frontend/src/components/: AdvancedFilters.tsx  AppHeader.tsx  BottomNav.tsx  CalendarManager.tsx  FilterBar.tsx  ImportZone.tsx  QrCodeModal.tsx  QrScannerModal.tsx
frontend/src/components/ui/: UiButton.tsx  UiInput.tsx  UiSelect.tsx
frontend/src/hooks/: useCalendarPersistence.ts  useDerivedEvents.ts  useIcsParserWorker.ts  useRemoteCalendars.ts
frontend/src/state/: uiState.tsx
frontend/src/utils/: colors.ts  parseDiagnostics.ts  remoteCalendars.ts  sessionOrdinals.ts  storageNamespace.ts
frontend/src/views/: Agenda.tsx  CourseExplorer.tsx  Fix.tsx  SearchResults.tsx  ServiceDashboard.tsx  Settings.tsx
frontend/src/views/course-explorer/: BreakdownCards.tsx  BreakdownTable.tsx  CourseCalendarDesktop.tsx  CourseCalendarMobile.tsx  CourseEventListMobile.tsx  CourseEventModal.tsx  CourseEventTableDesktop.tsx  CourseSummary.tsx  CourseTabs.tsx  SubjectPickerMobile.tsx  SubjectSidebarDesktop.tsx
frontend/src/workers/: icsParser.worker.ts  icsParserWorkerTypes.ts
