[package]
name = "agendum-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
regex = "1.10"
ical = "0.9" # Or appropriate ICS parser crate
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
